--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -4,7 +4,7 @@
 * {
     padding: 0px;
     margin: 10px;
-    color: #0E3D65;
+    color: red;
 }
 
 body {
@@ -13,21 +13,21 @@ body {
 }
 
 article {
-    border: 1px solid gray;
-    box-shadow: 2px 2px 5px gray;
+    border: 1px solid tan;
+    box-shadow: 2px 2px 5px tan;
     margin: 3em;
     padding: 1em;
 }
 
 aside {
-    background-color: gray;
+    background-color: tan;
     text-align: center;
     font-size: 50px;
     font-family: sans-serif;
     color: white;
     border: 2px solid red;
     float: right;
-    width: 30%;
+    width: 45%;
 }
 
 footer {
@@ -38,20 +38,20 @@ footer {
 }
 
 header {
-    border: 3px solid #F6B018;
-    background-color: #0E3D65;
+    border: 3px solid red;
+    background-color: tan;
     font-family: sans-serif;
     height: 120px;
     padding: 0;
 }
 
 header * {
-    color: #F6B018;
+    color: red;
 }
 
 hr {
     padding: 0px;
-    border: 4px solid #F6B018;
+    border: 4px solid red;
 }
 
 li {
@@ -66,7 +66,7 @@ li {
     width: 80px;
     float: right;
     background-color: white;
-    box-shadow: 2px 2px 5px gray;
+    box-shadow: 2px 2px 5px tan;
     border-radius: 5px;
     border: 1px solid white;
     padding: 0;
@@ -76,7 +76,7 @@ li {
     padding: 2em;
     box-shadow: 2px 2px 5px grey;
     background-color: #eeeeee;
-    border: 3px solid #0E3D65;
+    border: 3px solid red;
     border-radius: 10px;
     width: 50%;
     float: left;
