--- a/bacs200/wanted.css
+++ b/bacs200/wanted.css
@@ -27,7 +27,7 @@ aside {
     background-color: tan;
     text-align: center;
     font-size: 40px;
-    font-family: sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: white;
     border: 2px solid red;
     float: right;
@@ -45,7 +45,7 @@ footer {
 header {
     border: 3px solid red;
     background-color: tan;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     height: 120px;
     padding: 0;
     margin-top: 1in;
